cmake_minimum_required(VERSION 3.17)
project(test_v0)

set(CMAKE_CXX_STANDARD 14)

add_executable(test_v0 main.cpp 0010.cpp 0010.h 0009.cpp 0009.h 0014.cpp 0014.h 0067.cpp 0067.h 0539.cpp 0539.h 0104.cpp 0104.h 0020.cpp 0020.h 0038.cpp 0038.h 0044.cpp 0044.h 1081.cpp 1081.h 0003.cpp 0003.h 0005.cpp 0005.h)