cmake_minimum_required(VERSION 3.8.2)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp 0010.cpp 0010.h 0009.cpp 0009.h
        0014.cpp 0014.h 0067.cpp 0067.h 0539.cpp 0539.h 0104.cpp
        0104.h 0020.cpp 0020.h 0038.cpp 0038.h 0044.cpp 0044.h
        1081.cpp 1081.h 0003.cpp 0003.h 0005.cpp 0005.h 1169.cpp
        1169.h 1711.cpp 1711.h 1409.cpp 1409.h 0078.cpp 0078.h
        0289.cpp 0289.h 0062.cpp 0062.h 0048.cpp 0048.h 0042.cpp
        0042.h 0046.cpp 0046.h 0055.cpp 0055.h 0134.cpp 0134.h)